Upgrade JDK from 11->17
Bug: 1342018
Change-Id: I5351a4dbde2cf9a62ad76ab8c96ccf8872785f8a
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4181861
Owners-Override: Andrew Grieve <agrieve@chromium.org>
Commit-Queue: Sam Maier <smaier@chromium.org>
Reviewed-by: Andrew Grieve <agrieve@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1096879}